Fix spacing for bottom of div

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,11 +5,12 @@
 
 body {
     font-size: 16px;
+    margin-bottom: 50px; /* Temporary due to notice at bottom */
 }
 .scroll-top {
     position: fixed;
     right: 30px;
-    bottom: 10px;
+    bottom: 50px;
     height: 40px;
     width: 40px;
     border-radius: 25px;
